--- a/angular-app/src/app/login/login.component.html
+++ b/angular-app/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div id='login_form'>
     <h2>Login</h2>
-    <div *ngIf='_userService.logged_in_user._id'>
+    <div *ngIf='_userService.logged_in()'>
         <p>{{ _userService.logged_in_user.first_name }} {{ _userService.logged_in_user.last_name }} is already logged in, want to log out?</p>
         <button (click)='logout($event)'>Log Out</button>
     </div>
-    <form *ngIf='!_userService.logged_in_user._id' (submit)='login_attempt($event)' #loginForm='ngForm'>
+    <form *ngIf='!_userService.logged_in()' (submit)='login_attempt($event)' #loginForm='ngForm'>
         <p *ngIf='error' class='error'>{{ error.error }}</p>
         <p>Email</p>
         <input type="text" name="user.email" [(ngModel)]='user.email' required>
