--- a/angular-app/src/app/home/home.component.html
+++ b/angular-app/src/app/home/home.component.html
@@ -1,2 +1,8 @@
-<app-reg></app-reg>
-<app-login></app-login>
+<div class='padding_4p'>
+    <div id='welcome'>
+        <h1>Welcome to Two-Tires!</h1>
+        <p>Welcome to Two-Tires, a simple bicycle resale website coded and designed from scratch by Nicholas Chicirda. This site uses MEAN. To see the rest of Nick’s work and information go to <a href='http://www.nickchic.com'>nickchic.com</a>. Git Repo for this site can be seen <a href='https://github.com/nickchic/Two_Tires'>here</a>.</p>
+    </div>
+    <app-reg id='home_reg'></app-reg>
+    <app-login id='home_login'></app-login>
+</div>
