--- a/angular-app/src/app/create/create.component.html
+++ b/angular-app/src/app/create/create.component.html
@@ -1,34 +1,47 @@
-<h2>Add a Bike!</h2>
-<form (submit)='newBike($event)' #bikeForm='ngForm'>
-    <div class='form_half'>
-        <p>Title</p>
-        <div *ngIf='title.errors' class='error'>
-            <p *ngIf='title.errors.required'>Required</p>
-            <p *ngIf='title.errors.minlength'>Must be 3 characters.</p>
+<div class='padding_4p center_80 post'>
+    <h2 class='form_header'>Post a Bike Ad</h2>
+    <form (submit)='newBike($event)' #bikeForm='ngForm'>
+        <div class='form_half'>
+            <div class='single_input_wrap'>
+                <p class='input_title'>Title*</p>
+                <input type='text'  name='bike.title' [(ngModel)]='bike.title' #title='ngModel' required minlength='3'/>
+                <div class='error'>
+                    <!-- <p *ngIf='title.errors.required'>Required</p> -->
+                    <p *ngIf='title.errors && title.errors.minlength'>Must be 3 characters.</p>
+                </div>
+            </div>
+            <div class='single_input_wrap'>
+                <p class='input_title'>Price*</p>
+                <input type='number' pattern="^[0-9]+$" name='bike.price' [(ngModel)]='bike.price' #price='ngModel' required />
+                <div class='error'>
+                    <p *ngIf='price.errors && price.errors.pattern'>Numbers only.</p>
+                </div>
+            </div>
+            <div class='single_input_wrap'>
+                <p class='input_title'>Image URL</p>
+                <input type='text'  name='bike.image_url' [(ngModel)]='bike.image_url' #image_url='ngModel' />
+            </div>
         </div>
-        <input type='text'  name='bike.title' [(ngModel)]='bike.title' #title='ngModel' required minlength='3'/>
-        <p>Price</p>
-        <div *ngIf='price.errors' class='error'>
-            <p *ngIf='price.errors.pattern'>Numbers only.</p>
+        <div class='form_half'>
+            <div class='single_input_wrap'>
+                <p class='input_title'>Description*</p>
+                <input type='text'  name='bike.description' [(ngModel)]='bike.description' #description='ngModel' required minlength='3'/>
+                <div class='error'>
+                    <!-- <p *ngIf='description.errors.required'>Required</p> -->
+                    <p *ngIf='description.errors && description.errors.minlength'>Must be 3 characters.</p>
+                </div>
+            </div>
+            <div class='single_input_wrap'>
+                <p class='input_title'>Location*</p>
+                <input type='text' name='bike.location' [(ngModel)]='bike.location' #location='ngModel' required minlength='3'/>
+                <div class='error'>
+                    <!-- <p *ngIf='location.errors.required'>Required</p> -->
+                    <p *ngIf='location.errors && location.errors.minlength'>Must be 3 characters.</p>
+                </div>
+            </div>
+            <div class='submit_wrap'>
+                <input type="submit" [disabled]='!bikeForm.valid'>
+            </div>
         </div>
-        <input type='number' pattern="^[0-9]+$" name='bike.price' [(ngModel)]='bike.price' #price='ngModel' required />
-        <p>Image URL</p>
-        <input type='text'  name='bike.image_url' [(ngModel)]='bike.image_url' #image_url='ngModel' />
-    </div>
-    <div class='form_half'>
-        <p>Description</p>
-        <div *ngIf='description.errors' class='error'>
-            <p *ngIf='description.errors.required'>Required</p>
-            <p *ngIf='description.errors.minlength'>Must be 3 characters.</p>
-        </div>
-        <input type='text'  name='bike.description' [(ngModel)]='bike.description' #description='ngModel' required minlength='3'/>
-        <p>Location</p>
-        <div *ngIf='location.errors' class='error'>
-            <p *ngIf='location.errors.required'>Required</p>
-            <p *ngIf='location.errors.minlength'>Must be 3 characters.</p>
-        </div>
-        <input type='text' name='bike.location' [(ngModel)]='bike.location' #location='ngModel' required minlength='3'/>
-        <br />
-        <input type="submit" [disabled]='!bikeForm.valid'>
-    </div>   
-</form>
+    </form>
+</div>
