--- a/angular-app/src/app/listing/listing.component.css
+++ b/angular-app/src/app/listing/listing.component.css
@@ -1,16 +1,3 @@
-.bike_pic {
-    width:200px;
-    margin-right:10px
-}
-
-.info{
-    width: 100px;
-    display:inline-block;
-    vertical-align: top;
-}
-
-.bike{
-    padding: 10px;
-    border: 1px solid black;
-    width: 50%;
+.edit_buttons{
+    margin-top: 20px;
 }
