--- a/angular-app/src/app/login/login.component.html
+++ b/angular-app/src/app/login/login.component.html
@@ -1,16 +1,21 @@
-<div id='login_form'>
-    <h2>Login</h2>
+<div id='login_form' class='padding_4p'>
+    <h2 class='form_header'>Login</h2>
     <div *ngIf='_userService.logged_in()'>
         <p>{{ _userService.logged_in_user.first_name }} {{ _userService.logged_in_user.last_name }} is already logged in, want to log out?</p>
         <button (click)='logout($event)'>Log Out</button>
     </div>
     <form *ngIf='!_userService.logged_in()' (submit)='login_attempt($event)' #loginForm='ngForm'>
         <p *ngIf='error' class='error'>{{ error.error }}</p>
-        <p>Email</p>
-        <input type="text" name="user.email" [(ngModel)]='user.email' required>
-        <p>Password</p>
-        <input type="password" name="user.password" [(ngModel)]='user.password' required>
-        <br />
-        <input type="submit" [disabled]='!loginForm.valid'>
+        <div class='single_input_wrap'>
+            <p class='input_title'>Email</p>
+            <input type="text" name="user.email" [(ngModel)]='user.email' required>
+        </div>
+        <div class='single_input_wrap'>
+            <p class='input_title'>Password</p>
+            <input type="password" name="user.password" [(ngModel)]='user.password' required>
+        </div>
+        <div class='submit_wrap'>
+            <input type="submit" [disabled]='!loginForm.valid'>
+        </div>
     </form>
 </div>
