--- a/angular-app/src/app/search/search.component.css
+++ b/angular-app/src/app/search/search.component.css
@@ -1,16 +1,6 @@
-.info{
-    width: 200px;
-    display:inline-block;
-    vertical-align: top;
-    padding: 10px;
-    border: 1px solid black;
-    margin-right: 10px;
-}
-.bike_pic{
-    width:200px;
-}
-.bike{
-    padding: 10px;
-    border: 1px solid black;
-    width: 50%;
+.search_results {
+    width: 100%;
+    background-color: #e5e5e5;
+    padding-top: 20px;
+    margin-top: 20px;
 }
