--- a/angular-app/src/app/search/search.component.html
+++ b/angular-app/src/app/search/search.component.html
@@ -1,36 +1,47 @@
-<h2>Search Here!</h2>
-<form (submit)='search($event)'>
-    <input type="text" name='searchTerm' [(ngModel)]='searchTerm'>
-    <br />
-    <input type="submit" >
-</form>
-<br />
-<button (click)='reset()'>New Search</button>
+<div class='padding_4p center_80'>
+    <h2 class='form_header'>Search Here!</h2>
+    <form (submit)='search($event)'>
+        <div class='single_input_wrap'>
+            <p class='input_title'>Title</p>
+            <input type="text" name='searchTerm' [(ngModel)]='bike_search.title'>
+        </div>
+        <div class='single_input_wrap'>
+            <p class='input_title'>Location</p>
+            <input type="text" name='searchTerm' [(ngModel)]='bike_search.location'>
+        </div>
+        <div class='single_input_wrap'>
+            <p class='input_title'>Max Price</p>
+            <input type="number" name='searchTerm' [(ngModel)]='bike_search.price'>
+        </div>
+        <div class='submit_wrap'>
+            <input type="submit" >
+            <button (click)='reset()'>New Search</button>
+        </div>
+    </form>
+</div>
 
-<h2>Bikes!</h2>
-<div *ngIf='all_bikes'>
-    <div *ngFor='let bike of all_bikes' class='bike'>
-        <h2>{{ bike.title }}</h2>
-        <img *ngIf='bike.image_url' src="{{ bike.image_url }}" alt="No Picture" class='bike_pic'>
-        <div class='info'>
-            <h4>Price</h4>
-            <p>{{ bike.price }}</p>
-        </div>
-        <div class='info'>
-            <h4>Location</h4>
-            <p>{{ bike.location }}</p>
-        </div>
-        <div class='info'>
-            <h4>Description</h4>
-            <p>{{ bike.description }}</p>
-        </div>
-        <div class='info'>
-            <h4>User</h4>
-            <p>{{ bike.user.first_name }} {{ bike.user.last_name }}</p>
-            <p>{{ bike.user.email }}</p>
+<div *ngIf='all_bikes' class='search_results'>
+
+    <h2 class='center_80'>Search Results - {{ all_bikes.length }}</h2>
+    <div *ngFor='let bike of all_bikes' class='bike center_80'>
+        <div class='center_95'>
+            <div class='bike_pic'>
+                <div>
+                    <img *ngIf='bike.image_url' src="{{ bike.image_url }}" class='real_img' (error)="_bikeService.updateUrl($event)">
+                    <img *ngIf='!bike.image_url' src="assets/img/no_bike.png" class='place_holder' >
+                </div>
+            </div>
+            <div class='bike_info'>
+                <div class='bike_top_info'>
+                    <h2 class='bike_title'>{{ bike.title | titleize }} - ${{ bike.price }}</h2>
+                    <p class='bike_location'>{{ bike.location }}</p>
+                </div>
+                <p class='bike_user'>{{ bike.user.first_name }} {{ bike.user.last_name }} - <a href='mailto:{{bike.user.email}}'></a>{{ bike.user.email }}</p>
+                <p class='bike_desc'>{{ bike.description }}</p>
+            </div>
         </div>
     </div>
 </div>
-<div *ngIf='!all_bikes'>
-    <p>Hmm...Sorry nothing here</p>
+<div *ngIf='!all_bikes' class='search_results'>
+    <h2 class='center_80'>Hmm...Sorry nothing here</h2>
 </div>
