--- a/angular-app/src/app/app.component.css
+++ b/angular-app/src/app/app.component.css
@@ -8,7 +8,7 @@
 }
 
 #bg {
-    background-image: url('../assets/img/bg.jpg');
+    background-image: url(../assets/img/bg.jpg);
     background-size: 100vh;
     background-color: #272727;
     min-height: 100vh;
