--- a/angular-app/src/app/nav/nav.component.html
+++ b/angular-app/src/app/nav/nav.component.html
@@ -4,9 +4,9 @@
         <div id='links'>
             <a [routerLink]="['reg']" *ngIf='!_userService.logged_in()'>Register</a>
             <a [routerLink]="['login']" *ngIf='!_userService.logged_in()'>Login</a>
-            <a [routerLink]="['']" (click)='logout()' *ngIf='_userService.logged_in()'>Logout</a>
-            <a [routerLink]="['listings']" *ngIf='_userService.logged_in()'>Listings</a>
+            <a [routerLink]="['listings']" *ngIf='_userService.logged_in()'>My Listings</a>
             <a [routerLink]="['search']">Search</a>
+            <a [routerLink]="['']" (click)='logout()' *ngIf='_userService.logged_in()'>Logout</a>
         </div>
     </div>
 </div>
